--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Rock-paper-scissors</h1>
+
+  <div id = 'message'> </div>
+
+  <div id = "player-score">player score: 0</div>
+  <div id = "computer-score">computer score:0</div>
+    <button id = "rock">Rock</button>
+    <button id = "paper">paper</button>
+    <button id = "scissors">scissors</button>
+    <button id = "reset">reset</button>
+
+
     <script src="index.js" defer></script>
 </body>
 </html>
